--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ Smartphone Compatible web template" />
               <nav class="link-effect-3" id="link-effect-3">
                 <ul class="nav1 nav nav-wil">
                   <li class="active"><a data-hover="Home" href="index.html">Home</a></li>
-                  <li><a class="scroll" data-hover="About" href="#about">About</a></li>
+                  <li><a class="scroll" data-hover="About" href="#about">Sobre mi</a></li>
                   <li><a class="scroll" data-hover="Skills" href="#services">Skills</a></li>
-                  <li><a class="scroll" data-hover="Experience" href="#work">Experience</a></li>
-                  <li><a class="scroll" data-hover="Projects" href="#blogs">Projects</a></li>
-                  <li><a class="scroll" data-hover="Contact" href="#contact">Contact</a></li>
+                  <li><a class="scroll" data-hover="Experience" href="#work">Experiencia</a></li>
+                  <li><a class="scroll" data-hover="Projects" href="#blogs">Proyectos</a></li>
+                  <li><a class="scroll" data-hover="Contact" href="#contact">Contacto</a></li>
                 </ul>
               </nav>
               <!-- script-for-menu -->
@@ -407,9 +407,7 @@ Smartphone Compatible web template" />
           <div class="col-xs-10 wthree_about_right_grid_right">
             <h4>Others</h4>
             <ul class="news">
-              <li>Vagrant</li>
-              <li>Docker</li>
-              <li>Windows & Linux</li>
+              <li>Windows</li>
             </ul>
           </div>
           <div class="clearfix"> </div>
