change in lenguages

--- a/index.html
+++ b/index.html
@@ -122,38 +122,39 @@ Smartphone Compatible web template" />
             <ul class="address">
               <li>
                 <ul class="address-text">
-                  <li><b>NAME</b></li>
+                  <li><b>Nombre: </b></li>
                   <li>Jhon Steven Pavón Bedoya</li>
                 </ul>
               </li>
               <li>
                 <ul class="address-text">
-                  <li><b>D.O.B</b></li>
+                  <li><b>Fecha Nacimiento: </b></li>
                   <li>13-MAY-1992</li>
                 </ul>
               </li>
               <li>
                 <ul class="address-text">
-                  <li><b>MOBILE </b></li>
+                  <li><b>Numero Celular: </b></li>
                   <li>+57 3207231691</li>
                 </ul>
               </li>
               <li>
                 <ul class="address-text">
-                  <li><b>ADDRESS </b></li>
+                  <li><b>Direccion </b></li>
                   <li>Bello(Antioquia), Colombia.</li>
                 </ul>
               </li>
               <li>
                 <ul class="address-text">
-                  <li><b>E-MAIL </b></li>
+                  <li><b>E-Mail: </b></li>
                   <li><a href="mailto:stiven-pavon@hotmail.com"> stiven-pavon@hotmail.com</a></li>
                 </ul>
               </li>
               <li>
                 <ul class="address-text">
-                  <li><b>LANGUAGE </b></li>
-                  <li>Spanish</li>
+                  <li><b>Idioma: </b></li>
+                  <li>Español - Nativo</li>
+                  <li>Ingles - A2</li>
                 </ul>
               </li>
             </ul>
@@ -173,13 +174,15 @@ Smartphone Compatible web template" />
       <div id="owl-demo1" class="owl-carousel owl-carousel2">
         <div class="item">
           <div class="about-left-grid">
-            <h2>My <span>Education</span></h2>
-            <p>I've completed my,
-            <P>
-            <p>E.Tech in Data Analyst <a href="http://www.udea.edu.co/" target="_blank">Universidad de Antiquia</a>,
-              during the period of 2020 - 2021.</p>
-            <p>B.Eng in Mechanical Engineering <a href="https://www.eafit.edu.co/pregrado-ingenieria-mecanica" target="_blank"> EAFIT university</a>
-              , during the period of 2012 - 2016.
+            <h2>Mi <span>Educacion</span></h2>
+            <p>He completado,</p>
+
+            <p>Ingenieria de sistemas <a href="https://www.eafit.edu.co/pregrado-ingenieria-mecanica" target="_blank"> Ints. Universitaria Salazar y Herrera</a>
+              , durante el periodo de 2018 - Actualmente.</p>
+            
+            <p>Tecnología en informatica <a href="http://www.udea.edu.co/" target="_blank">Corp. Universitaria Minuto de Dios</a>,
+              durante el periodo de 2010 - 2014.</p>
+
             <ul>
               <li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
             </ul>
