add profile pdf

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Smartphone Compatible web template" />
             <h1>Jhon Steven Pavón Bedoya</h1>
             <h6> WEB DEVELOPER</h6>
             <div class="hero__links">
-              <a href="docs/Danilo_Diaz_Resume.pdf" target="_blank" class="hero__resume btn"
+              <a href="docs/profile_steven_pavon.pdf" target="_blank" class="hero__resume btn"
                 title="Click para ver">Ver currículum</a>
               <ul class="hero__social">
                 <li>
@@ -560,60 +560,47 @@ Smartphone Compatible web template" />
   <div class="blog" id="blogs">
     <div class="container">
       <div class="service-head text-center">
-        <h4>PROJECTS</h4>
-        <h3>MY <span>Projects</span></h3>
+        <h4>PARTICIPACIÓN</h4>
+        <h3><span>PROYECTOS</span></h3>
         <span class="border one"></span>
       </div>
       <div class="news-grid w3l-agile">
         <div class="col-md-6 news-text">
-          <h3> Machine Learning study group</h3>
+          <h3> CCV Postobon</h3>
           <ul class="news">
-            <li>Python</li>
-            <li>PySpark</li>
-            <li>Machine Learning</li>
-            <li>Tensorflow</li>
-            <li>Scikit learn </li>
+            <li>.Net Core</li>
+            <li>Angular framework</li>
+            <li>Sql Server</li>
+            <li>Azure DevOps </li>
           </ul>
-          <p>The objective of the group is to ensure that its members obtained an advanced level in machine
-            learning knowledge and to develop innovative projects in the city.</p>
         </div>
         <div class="col-md-6 news-text">
-          <h3> Demand Forecasting in Warehouses with Machine Learning </h3>
+          <h3> Coopetraban </h3>
           <ul class="news">
-            <li>Python</li>
-            <li>SQL</li>
-            <li>Suply Chain</li>
-            <li>PySpark</li>
+            <li>.Net Core</li>
+            <li>Angular framework</li>
+            <li>Sql Server</li>
           </ul>
-          <p>Implement machine learning models to predict product’s demand and picking times, to improve the processes
-            inside the warehouse.</p>
         </div>
         <div class="clearfix"></div>
       </div>
       <div class="news-grid w3l-agile">
         <div class="col-md-6 news-text">
-          <h3> BOM with Sql and Excel.</h3>
+          <h3> Tuya App</h3>
           <ul class="news">
-            <li>SQL</li>
-            <li>Python</li>
-            <li>Pandas</li>
-            <li>Numpy</li>
+            <li>.Net Core</li>
+            <li>Sql Server</li>
           </ul>
-          <p>A bill of materials(BOM) explosion displays an assembly at the highest level broken down into its
-            individual components and parts at the lowest level, this applicationwas implemented in SQL and
-            Excel.</p>
         </div>
         <div class="col-md-6 news-text">
-          <h3> A Robotic System capable of pouring drinks to its user </h3>
+          <h3> Tena y Terpel </h3>
           <ul class="news">
-            <li>Matlab</li>
+            <li>.Net Framework</li>
             <li>SQL</li>
-            <li>Arduino</li>
+            <li>Episerver</li>
+            <li>Jquery</li>
+            <li>Angular js</li>
           </ul>
-          <p>The prototype robot performs tasks such as pouring driks in collaboration with a built-in camera
-            which creates a supplying live vision of the surroundings. The project goal is fully defined as a
-            robotic prototype that can mimic some waiter’s tasks using artifcial vision, inverse kinematics and
-            control the pump of the liquor’s fow.</p>
         </div>
         <div class="clearfix"></div>
       </div>
@@ -627,8 +614,8 @@ Smartphone Compatible web template" />
   <div class="footer" id="contact">
     <div class="container">
       <div class="service-head one text-center">
-        <h4>CONTACT ME</h4>
-        <h3>GET <span>IN TOUCH WITH ME</span></h3>
+        <h4>CONTÁCTAME</h4>
+        <h3><span>PONTE EN CONTACTO CONMIGO</span></h3>
         <span class="border two"></span>
       </div>
       <div class="mail_us">
@@ -636,31 +623,28 @@ Smartphone Compatible web template" />
           <div class="contact-grid1-left">
             <div class="contact-grid1-left1">
               <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-              <h4>Contact By Email</h4>
+              <h4>Email</h4>
               <ul>
-                <li>Primary: <a href="mailto:ddiazva13@gmail.com">ddiazva13@gmail.com</a></li>
-                <li>
-                  <Secondary></Secondary>: <a href="danilodiaz_0313@hotmail.com">danilodiaz_0313@hotmail.com</a>
-                </li>
+                <li>Primary: <a href="mailto:stiven-pavon@hotmail.com">stiven-pavon@hotmail.com</a></li>
               </ul>
             </div>
           </div>
           <div class="contact-grid1-left">
             <div class="contact-grid1-left1">
               <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-              <h4>Contact By Mobile</h4>
+              <h4>Movil</h4>
               <ul>
-                <li>Mobile: +57 3165756539</li>
+                <li>+57 3207231691</li>
               </ul>
             </div>
           </div>
           <div class="contact-grid1-left">
             <div class="contact-grid1-left1">
               <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-              <h4>Looking For Address</h4>
+              <h4>Direccion</h4>
               <ul>
-                <li>Address: Bello(Antiquia), Colombia</li>
-                <li>DIG 56 # 21 - 04</li>
+                <li>Bello (Antiquia), Colombia</li>
+                <li>Av 31 # 66 - 29</li>
               </ul>
             </div>
           </div>
@@ -683,11 +667,11 @@ Smartphone Compatible web template" />
         <div class="clearfix"></div>
       </div>
       <div class="copy_right text-center">
-        <p class="float-left">&copy; 2020 Profile of Danilo Diaz Valencia</p>
+        <p class="float-left">&copy; 2020 Profile of Jhon Steven Pavón Bedoya</p>
         <p class="float-right">Design on top of <a href="http://w3layouts.com/" target="_blank">W3layouts.</a></p>
         <ul class="hero__social">
           <li>
-            <a href="https://github.com/NILodio" rel="noopener" target="_blank" title="GitHub">
+            <a href="https://github.com/jspavon" rel="noopener" target="_blank" title="GitHub">
               <svg version="1.1" width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M896 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 .5-76.5t.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 .5 88.5t.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zm-477 1103q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zm31 34q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zm30 45q9-7 0-19-8-13-17-6-9 5 0 18t17 7zm42 42q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zm57 25q3-11-13-16-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zm58-10q-2-11-18-9-16 3-14 15t18 8 14-14z">
@@ -696,7 +680,7 @@ Smartphone Compatible web template" />
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/danilo-diaz/" rel="noopener" target="_blank" title='LinkedIn'>
+            <a href="https://www.linkedin.com/in/stiven-pavon/" rel="noopener" target="_blank" title='LinkedIn'>
               <svg version="1.1" width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M477 625v991h-330v-991h330zm21-306q1 73-50.5 122t-135.5 49h-2q-82 0-132-49t-50-122q0-74 51.5-122.5t134.5-48.5 133 48.5 51 122.5zm1166 729v568h-329v-530q0-105-40.5-164.5t-126.5-59.5q-63 0-105.5 34.5t-63.5 85.5q-11 30-11 81v553h-329q2-399 2-647t-1-296l-1-48h329v144h-2q20-32 41-56t56.5-52 87-43.5 114.5-15.5q171 0 275 113.5t104 332.5z">
