change mouse over

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ Smartphone Compatible web template" />
               <nav class="link-effect-3" id="link-effect-3">
                 <ul class="nav1 nav nav-wil">
                   <li class="active"><a data-hover="Home" href="index.html">Home</a></li>
-                  <li><a class="scroll" data-hover="About" href="#about">Sobre mi</a></li>
+                  <li><a class="scroll" data-hover="Sobre mi" href="#about">Sobre mi</a></li>
                   <li><a class="scroll" data-hover="Skills" href="#services">Skills</a></li>
-                  <li><a class="scroll" data-hover="Experience" href="#work">Experiencia</a></li>
-                  <li><a class="scroll" data-hover="Projects" href="#blogs">Proyectos</a></li>
-                  <li><a class="scroll" data-hover="Contact" href="#contact">Contacto</a></li>
+                  <li><a class="scroll" data-hover="Experiencia" href="#work">Experiencia</a></li>
+                  <li><a class="scroll" data-hover="Proyectos" href="#blogs">Proyectos</a></li>
+                  <li><a class="scroll" data-hover="Contacto" href="#contact">Contacto</a></li>
                 </ul>
               </nav>
               <!-- script-for-menu -->
@@ -207,7 +207,7 @@ Smartphone Compatible web template" />
           autoPlay: true,
           navigation: true,
           navigationText: false,
-          pagination: true,
+          pagination: false,
         });
       });
     </script>
@@ -220,7 +220,7 @@ Smartphone Compatible web template" />
           autoPlay: true,
           navigation: true,
           navigationText: true,
-          pagination: true,
+          pagination: false,
         });
       });
     </script>
@@ -625,7 +625,7 @@ Smartphone Compatible web template" />
               <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
               <h4>Email</h4>
               <ul>
-                <li>Primary: <a href="mailto:stiven-pavon@hotmail.com">stiven-pavon@hotmail.com</a></li>
+                <li><a href="mailto:stiven-pavon@hotmail.com">stiven-pavon@hotmail.com</a></li>
               </ul>
             </div>
           </div>
