add new experience

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ Smartphone Compatible web template" />
   <link href='//fonts.googleapis.com/css?family=Asap:400,700,400italic' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
   <!-- webfonts -->
+
+
   <!---- start-smoth-scrolling---->
   <script type="text/javascript" src="js/move-top.js"></script>
   <script type="text/javascript" src="js/easing.js"></script>
@@ -262,7 +264,7 @@ Smartphone Compatible web template" />
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                   aria-valuemax="100">
-                  <span class="skill">Javascript</span>
+                  <span class="skill">.Net Core</span>
                 </div>
               </div>
             </div>
@@ -298,6 +300,22 @@ Smartphone Compatible web template" />
                 </div>
               </div>
             </div>
+            <div class="col-md-6 left-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span class="skill">Golang</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 right-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span class="skill">JavaScript </span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="clearfix"> </div>
         </div>
@@ -319,7 +337,7 @@ Smartphone Compatible web template" />
                       aria-valuenow="100" 
                       aria-valuemin="0"
                       aria-valuemax="100">
-                  <span class="skill">Azure</span>
+                  <span class="skill">Azure DevOps</span>
                 </div>
               </div>
             </div>
@@ -327,7 +345,7 @@ Smartphone Compatible web template" />
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                   aria-valuemax="100">
-                  <span class="skill">DevOps</span>
+                  <span class="skill">Teams</span>
                 </div>
               </div>
             </div>
@@ -336,7 +354,7 @@ Smartphone Compatible web template" />
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                   aria-valuemax="100">
-                  <span class="skill">Jira Software</span>
+                  <span class="skill">Jira</span>
                 </div>
               </div>
             </div>
@@ -345,6 +363,23 @@ Smartphone Compatible web template" />
                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                   aria-valuemax="100">
                   <span class="skill">Sourcetree</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 left-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span class="skill">Slack</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 right-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span class="skill">Github</span>
                 </div>
               </div>
             </div>
@@ -383,6 +418,8 @@ Smartphone Compatible web template" />
             <ul class="news">
               <li>Scrum</li>
               <li>Git & GitHub </li>
+              <li>Azure DevOps </li>
+              <li>Jira </li>
             </ul>
           </div>
           <div class="clearfix"> </div>
@@ -398,6 +435,7 @@ Smartphone Compatible web template" />
             <ul class="news">
               <li>Visual Studio</li>
               <li>Visual Studio Code</li>
+              <li>Intellij</li>
               <li>Notepad++</li>
             </ul>
             <ul class="news">
@@ -416,6 +454,7 @@ Smartphone Compatible web template" />
             <h4>Otros</h4>
             <ul class="news">
               <li>Windows</li>
+              <li>MacOs </li>
             </ul>
           </div>
           <div class="clearfix"> </div>
@@ -438,9 +477,24 @@ Smartphone Compatible web template" />
       <div class="time-main w3l-agile">
         <div class="col-md-6 year-info">
           <ul class="year">
-            <li>Actual <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
+            <!--li>Actual <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li-->
+            <li>SEPTIEMBRE 2022 - DICIEMBRE 2023<i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
             <div class="clearfix"></div>
             <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <li>MAYO 2021 - SEPTIEMBRE 2022 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
             <br>
             <br>
             <br>
@@ -467,6 +521,7 @@ Smartphone Compatible web template" />
             <br>
             <br>
             <br>
+            <br>
             <li>ENERO 2015 - JULIO 2018 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
             <div class="clearfix"></div>
           </ul>
@@ -476,11 +531,35 @@ Smartphone Compatible web template" />
             <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
+                <h4 class="timeline-title"><a href="https://intergrupo.com/" target="_blank">MERCADOLIBRE<i>
+                      Medellin (Antioquia), Colombia</i></a></h4>
+              </div>
+              <div class="timeline-body">
+                <p><strong>software engineer</strong></p>
+                <ul>
+                  <li>Mantenimiento Codigo existente.</li>
+                  <li>Guianza tecnica para la migracion de aplicativo.</li>
+                  <li>Soporte aplicativos usuario final y equipos internos </li>
+                  <li>Optimizar e implementar algoritmos.</li>
+                  <li>Mantenimiento de infraestructura bajo software propio de la compañia</li>
+                  <li>Planificacion de tareas segun necesidad interna.</li>
+                  <li>Revision par de codigo y test unitarias</li>
+                  <li>Implementacion nuevas funcionalidades para mejora de performance del aplicativo</li>
+                  <li>Seguimiento y control de metricas del aplicativo </li>
+                  <li>Trabajo bajo metodología Scrum</li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
                 <h4 class="timeline-title"><a href="https://intergrupo.com/" target="_blank">INTERGRUPO<i>
                       Sabaneta (Antioquia), Colombia</i></a></h4>
               </div>
               <div class="timeline-body">
-                <p><strong>Ingeniero de desarrollo</strong></p>
+                <p><strong>..</strong></p>
                 <ul>
                   <li>Desarrollo de algoritmos.</li>
                   <li>Desarrollo api's bajo lenguaje .NET Core</li>
@@ -564,6 +643,8 @@ Smartphone Compatible web template" />
         <h3><span>PROYECTOS</span></h3>
         <span class="border one"></span>
       </div>
+
+      
       <div class="news-grid w3l-agile">
         <div class="col-md-6 news-text">
           <h3> CCV Postobon</h3>
@@ -604,6 +685,26 @@ Smartphone Compatible web template" />
         </div>
         <div class="clearfix"></div>
       </div>
+
+      <div class="news-grid w3l-agile">
+        <div class="col-md-6 news-text">
+          <h3> Activities - MercadoPago</h3>
+          <ul class="news">
+            <li>Golang</li>
+            <li>Kvs Database</li>
+          </ul>
+        </div>
+        <div class="col-md-6 news-text">
+          <h3> Essa by Grupo EPM</h3>
+          <ul class="news">
+            <li>.Net Framework</li>
+            <li>Sql Server</li>
+            <li>CMS DNN</li>
+          </ul>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
     </div>
   </div>
   <!-- top-grids -->
@@ -619,7 +720,7 @@ Smartphone Compatible web template" />
         <span class="border two"></span>
       </div>
       <div class="mail_us">
-        <div class="col-md-6 mail_left">
+        <div class="col-md-6 col-md-offset-3">
           <div class="contact-grid1-left">
             <div class="contact-grid1-left1">
               <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
@@ -650,7 +751,7 @@ Smartphone Compatible web template" />
           </div>
           <div class="clearfix"> </div>
         </div>
-        <div class="col-md-6 mail_right">
+        <!--div class="col-md-6 mail_right">
           <form action="#" method="post">
             <input type="text" name="Name" value="Name" onfocus="this.value = '';"
               onblur="if (this.value == '') {this.value = 'Name';}" required="">
@@ -658,12 +759,12 @@ Smartphone Compatible web template" />
               onblur="if (this.value == '') {this.value = 'Email';}" required="">
             <input type="text" name="Mobile number" value="Mobile number" onfocus="this.value = '';"
               onblur="if (this.value == '') {this.value = 'Mobile number';}" required="">
-            <textarea name="Message..." onfocus="this.value = '';"
+            <textarea id="message" name="Message..." onfocus="this.value = '';"
               onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
-            <input type="submit" value="Send">
+            <input type="submit" value="Send" onclick="sendEmail()">
 
           </form>
-        </div>
+        </div-->
         <div class="clearfix"></div>
       </div>
       <div class="copy_right text-center">
@@ -720,7 +821,6 @@ Smartphone Compatible web template" />
   <!--end-smooth-scrolling-->
   <!-- //for bootstrap working -->
   <script src="js/bootstrap.js"></script>
-
 
 </body>
 
