add tittle experience

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ Smartphone Compatible web template" />
                       Sabaneta (Antioquia), Colombia</i></a></h4>
               </div>
               <div class="timeline-body">
-                <p><strong>..</strong></p>
+                <p><strong>Ingeniero de Desarrollo</strong></p>
                 <ul>
                   <li>Desarrollo de algoritmos.</li>
                   <li>Desarrollo api's bajo lenguaje .NET Core</li>
