--- a/index.html
+++ b/index.html
@@ -316,6 +316,25 @@ Smartphone Compatible web template" />
                 </div>
               </div>
             </div>
+            
+            <div class="col-md-6 left-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-success" role="progressbar" 
+                     aria-valuenow="100" 
+                     aria-valuemin="0"
+                     aria-valuemax="100">
+                  <span class="skill">Node Js</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 right-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span class="skill">React</span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="clearfix"> </div>
         </div>
@@ -400,7 +419,8 @@ Smartphone Compatible web template" />
           <div class="col-xs-10 wthree_about_right_grid_right">
             <h4>Databases</h4>
             <ul class="news">
-              <li>Sql Server</li>
+              <li>SQL Server</li>
+              <li>Mongo</li>
               <li>MySql</li>
               <li>Postgres</li>
             </ul>
@@ -477,9 +497,15 @@ Smartphone Compatible web template" />
       <div class="time-main w3l-agile">
         <div class="col-md-6 year-info">
           <ul class="year">
-            <!--li>Actual <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li-->
+            <li>MARZO 2024 - A LA FECHA<i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <li>SEPTIEMBRE 2022 - DICIEMBRE 2023<i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
-            <div class="clearfix"></div>
             <br>
             <br>
             <br>
@@ -531,7 +557,26 @@ Smartphone Compatible web template" />
             <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a href="https://intergrupo.com/" target="_blank">MERCADOLIBRE<i>
+                <h4 class="timeline-title"><a href="https://www.siigo.com/" target="_blank">SIIGO<i>
+                      Medellin (Antioquia), Colombia</i></a></h4>
+              </div>
+              <div class="timeline-body">
+                <p><strong>BACKEND Ssr</strong></p>
+                <ul>
+                  <li>Mantenimiento Codigo existente.</li>
+                  <li>Soporte aplicativo usuario final.</li>
+                  <li>Desarrollo, Optimizar e implementar nuevos algoritmos. </li>
+                  <li>Desarrollo, Optimizar e implementar test unitarias.</li>
+                  <li>Trabajo bajo metodología Scrum</li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title"><a href="https://www.mercadolibre.com.co/" target="_blank">MERCADOLIBRE<i>
                       Medellin (Antioquia), Colombia</i></a></h4>
               </div>
               <div class="timeline-body">
@@ -591,7 +636,7 @@ Smartphone Compatible web template" />
             </div>
           </li>
           <li>
-            <div class="timeline-badge primary"><i class="glyphicon glyphicon-briefcase"></i></div>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4 class="timeline-title"><a href="https://doctus.com.co/"> Doctus S.A.S</a></h4>
@@ -611,7 +656,7 @@ Smartphone Compatible web template" />
             </div>
           </li>
           <li>
-            <div class="timeline-badge primary"><i class="glyphicon glyphicon-briefcase"></i></div>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4 class="timeline-title"><a href="https://www.julius2grow.com/es/inicio/"> Arkix S.A.S (Julius 2 grow)</a></h4>
@@ -751,20 +796,6 @@ Smartphone Compatible web template" />
           </div>
           <div class="clearfix"> </div>
         </div>
-        <!--div class="col-md-6 mail_right">
-          <form action="#" method="post">
-            <input type="text" name="Name" value="Name" onfocus="this.value = '';"
-              onblur="if (this.value == '') {this.value = 'Name';}" required="">
-            <input type="email" name="Email" value="Email" onfocus="this.value = '';"
-              onblur="if (this.value == '') {this.value = 'Email';}" required="">
-            <input type="text" name="Mobile number" value="Mobile number" onfocus="this.value = '';"
-              onblur="if (this.value == '') {this.value = 'Mobile number';}" required="">
-            <textarea id="message" name="Message..." onfocus="this.value = '';"
-              onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
-            <input type="submit" value="Send" onclick="sendEmail()">
-
-          </form>
-        </div-->
         <div class="clearfix"></div>
       </div>
       <div class="copy_right text-center">
